# aoi_defect_history

./: .gitignore  README.md  aoi-defect-history-test.spec  build.bat  build_test.py  check_workflow.py  create_icon.py  defect.csv  defect_mapping.csv  kintone_settings.ini  main.py  pyinstaller.spec  pyproject.toml  settings.ini  smt_schedule.csv  user.csv  version_info.txt
.github/workflows/: build-windows-spec.yml  build-windows.yml
src/: __init__.py  aoi_view.py  defect_info.py  main_view.py  mode_view.py  repair_view.py  repaird_info.py  utils.py
src/dialog/: __init__.py  change_user_dialog.py  item_code_change_dialog.py  lot_change_dialog.py
src/sub_window/: __init__.py  kintone_settings.py  settings_window.py
tests/: README_32bit_tests.md  run_32bit_tests.py  test_32bit_compatibility.py  test_32bit_performance.py  validate_32bit_config.py
